package delta;

public class Car implements Vehicle{

    @Override
    public void system() {
        System.out.println("It is a Car & It has a body");
    }
}
