package delta;

public class Motorcycle implements Vehicle{
    @Override
    public void system() {
        System.out.println("It is motocycle & it is compare to smaller than Car and Truck");
    }
}
