package delta;

public class Truck implements Vehicle{

    @Override
    public void system() {
        System.out.println("It is Truck & it has stronger engine than Car");
    }
}
