package delta;

public interface Vehicle {
void system();
}
